--- a/Kubinec Owen APSA 2017 Islamist-Secularist Polarization.tex
+++ b/Kubinec Owen APSA 2017 Islamist-Secularist Polarization.tex
@@ -5,6 +5,7 @@
 \usepackage{array}
 \usepackage{ragged2e}
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage{fullpage}
 \usepackage{parskip}
 \usepackage{titling}
@@ -37,11 +38,13 @@
 
 \maketitle
 
-\abstract{Scholars continue to disagree as to how far contentious politics diffuses within and across states and by what mechanisms it does so. We use new data and empirical measures to test polarization during and after the Arab Uprisings of 2010-12. After authoritarian governments began to fall, populations in several states began to polarize between secularists and Islamists over what kind of regime was to replace the ousted one. We hypothesize that this Islamist-secularist polarization was triggered by catalytic events (such as Muslim Brotherhood electoral victory in Egypt) and diffused transnationally owing to social media and satellite television, dividing anti-status-quo actors throughout the region. To examine polarization over time, we collected a comprehensive dataset on elite and citizen Twitter accounts across Arab countries after the Arab Spring. Using item-response models, we model polarization as the difference in latent ideological position between elites, and we show how polarization within countries changes over time in response to exogenous political shocks. By doing so we are the first to offer compelling statistical evidence of the endogenous process of polarization across competing ideological groups and states.}\footnote{\linespread{.5} Prepared for presentation at the Annual Meeting of the American Political Science Association, San Francisco, 1 September 2017. Copyright \textcopyright 2017 by the American Political Science Association. The authors thank the Amb. Henry J. and Mrs. Marion R. Taylor Chair at the University of Virginia for research funding.  John Owen thanks the Liu Institute for Global Inquiry at the University of British Columbia for providing a research venue. Robert Kubinec thanks the University of Virginia's Quantitative Collaborative for computing resources and Jonathan Kropko for helpful feedback on this project.}
+	\begin{abstract}
+		Scholars continue to disagree as to how far contentious politics diffuses within and across states and by what mechanisms it does so. We use new data and empirical measures to test polarization during and after the Arab Uprisings of 2010-12. After authoritarian governments began to fall, populations in several states began to polarize between secularists and Islamists over what kind of regime was to replace the ousted one. We hypothesize that this Islamist-secularist polarization was triggered by catalytic events (such as Muslim Brotherhood electoral victory in Egypt) and diffused transnationally owing to social media and satellite television, dividing anti-status-quo actors throughout the region. To examine polarization over time, we collected a comprehensive dataset on elite and citizen Twitter accounts across Arab countries after the Arab Spring. Using item-response models, we model polarization as the difference in latent ideological position between elites, and we show how polarization within countries changes over time in response to exogenous political shocks. By doing so we are the first to offer compelling statistical evidence of the endogenous process of polarization across competing ideological groups and states.\footnote{\linespread{.5} Prepared for presentation at the Annual Meeting of the American Political Science Association, San Francisco, 1 September 2017. Copyright \textcopyright 2017 by the American Political Science Association. The authors thank the Amb. Henry J. and Mrs. Marion R. Taylor Chair at the University of Virginia for research funding.  John Owen thanks the Liu Institute for Global Inquiry at the University of British Columbia for providing a research venue. Robert Kubinec thanks the University of Virginia's Quantitative Collaborative for computing resources and Jonathan Kropko for helpful feedback on this project.}
+	\end{abstract}
 
-\section*{Introduction}
+	\section*{Introduction}
 
-The Arab Uprising of 2010-13 was an exceedingly complex phenomenon.  The initial event – the self-immolation of Mohamed Bouazizi in Sidi Bouzid, Tunisia – triggered a chain of events marked by interaction and feedback loops.  During the Uprising, experts predicted a particular unfolding or winding down of the phenomenon, and often were wrong.  Some assured their readers that the Tunisian unrest of December 2010 and January 2011 would not spread to other Arab countries (Karon 2011; Walt 2011); others predicted that the unrest that did spread to Libya, Egypt, Yemen, Syria, and elsewhere would bring liberal democracy to those countries (Obama 2011, Jupp\'{e} 2011 – any non-politicians?).  In other words, two of the unpredictable developments were the spread of unrest across countries and the evident shift in the goals of rebels.  
+	The Arab Uprising of 2010-13 was an exceedingly complex phenomenon.  The initial event – the self-immolation of Mohamed Bouazizi in Sidi Bouzid, Tunisia – triggered a chain of events marked by interaction and feedback loops.  During the Uprising, experts predicted a particular unfolding or winding down of the phenomenon, and often were wrong.  Some assured their readers that the Tunisian unrest of December 2010 and January 2011 would not spread to other Arab countries (Karon 2011; Walt 2011); others predicted that the unrest that did spread to Libya, Egypt, Yemen, Syria, and elsewhere would bring liberal democracy to those countries (Obama 2011, Jupp\'{e} 2011 – any non-politicians?).  In other words, two of the unpredictable developments were the spread of unrest across countries and the evident shift in the goals of rebels.  
 A helpful approach to explaining, if not predicting, the progress of the Arab Uprising and infectious political unrest more generally is via group polarization, or the endogenous segregation of a population by preferences into two or more mutually antagonistic groups.  
 
 Group polarization is situational and hence may be short-lived; it is different from the long-term, materially based social polarization that many social scientists study (Moulaert et al. 2003).  Group polarization is a way to conceive of how identities and preferences change in response to exogenous events such as a public demonstration or a coup d'\'{e}tat.  A stylized version runs as follows:  At time $t$, an unmodeled event takes place (e.g., Bouazizi's self-immolation); at $t+1$, the news spreads; at $t+2$, a portion of the population of Sidi Bouzid becomes angry and identifies more strongly against the local and national government, as reflected in anti-government speech and action; at $t+3$, news of that speech and action spreads; at $t+4$, a portion of Sidi Bouzid's population becomes angry at the protesters and identifies more strongly with the government, as reflected in pro-government speech and action; at $t+5$, news of that speech and action spread within Tunisia and beyond; and so on.  Group polarization is self-reinforcing.  It may be slowed, halted, or reversed by various developments, including coercion (censorship, physical force) by governments.
@@ -58,7 +61,7 @@ In what follows, we explicate the logic of group polarization in an informal mod
 \section*{Group Polarization: An Informal Model}
 Polarization has been studied extensively by social scientists.  Much of that work concerns social polarization, or segregation into groups that are stable over long periods of time (such as ``Red America" and ``Blue America").   By group polarization, we mean a process of segregation – not an equilibrium – that is relatively short-term or situational yet may be politically consequential.   Along with other scholars, we define polarization as a social construct, namely as progressive identity change that entails preference change.   When two actors polarize, at time $t$, both actors may prefer a 50-50 allocation of goods; at $t+1$, each may prefer a 60-40 allocation in its favor; at $t+2$, a 75-25 allocation; and so on.  At the limit of polarization, each side wishes the other destroyed.   Group polarization, then, is one way to formulate a progressive worsening of conflict; it does not cause conflict, in the sense of an independent variable causing a dependent one.  Rather, polarization is conflict that is self-intensifying.  Group polarization is endogenous, not in the sense that it is unrelated to pre-existing cleavages bur rather in the sense that, once triggered by exogenous events, it is self-intensifying.   It entails the altering of individuals' preferences and practices and creates new threats and opportunities for various actors, including actual and aspiring rulers.  
 
-Stated informally, the basic group polarization model is simple.  Assume a population of 100 persons, all 100 belonging to one half or another of $x$ pairs of opposing social groups (labor or capital, democrats or authoritarians, Islamists or secularists, urban or rural, etc., etc.).  Fifty are pro-democracy, fifty pro-authoritarian.  These groups do not correlate significantly to any other groups; e.g., democrats are as likely to be Islamist as secularist.  The population thus has cross-cutting cleavages.   At time $t$, the population begins in an unbiased equilibrium, such that, although individuals may identify more strongly with one group affiliation than with others, in the population as a whole, no identity axis predominates; hence social interaction does not skew the distribution of resources, including information, to any of the social groups (Dunning and Harrison 2010).  Now suppose that at t+1 three democrats – one Islamist and two secularist, and two urban and one rural – publicly beat an authoritarian.  Assuming a relatively free flow of information, that event can trigger the polarization of the population along a democratic-authoritarian ideological axis, such that democrats and authoritarians care less and less about class, being urban or rural, or mosque-state questions and more and more about ideology.  If not disrupted, polarization by definition culminates in inter-group violence.
+Stated informally, the basic group polarization model is simple.  Assume a population of 100 persons, all 100 belonging to one half or another of $x$ pairs of opposing social groups (labor or capital, democrats or authoritarians, Islamists or secularists, urban or rural, etc., etc.).  Fifty are pro-democracy, fifty pro-authoritarian.  These groups do not correlate significantly to any other groups; e.g., democrats are as likely to be Islamist as secularist.  The population thus has cross-cutting cleavages.   At time $t$, the population begins in an unbiased equilibrium, such that, although individuals may identify more strongly with one group affiliation than with others, in the population as a whole, no identity axis predominates; hence social interaction does not skew the distribution of resources, including information, to any of the social groups (Dunning and Harrison 2010).  Now suppose that at $t+1$ three democrats – one Islamist and two secularist, and two urban and one rural – publicly beat an authoritarian.  Assuming a relatively free flow of information, that event can trigger the polarization of the population along a democratic-authoritarian ideological axis, such that democrats and authoritarians care less and less about class, being urban or rural, or mosque-state questions and more and more about ideology.  If not disrupted, polarization by definition culminates in inter-group violence.
 
 Transnational group polarization takes place when polarization spans two or more countries at once.  Citizenship in a state amounts to yet another group affiliation, albeit normally an especially politically salient one that carries the advantages of a state apparatus.  States are set up to foster group identity and loyalty vis-à-vis foreigners.  They may use physical segregation, closed or semi-closed national borders, national economic integration, propaganda, history, threats of war, coercion, and other means to induce a strong national identity among citizens and hence a strong sense that foreigners are an ``other."  Yet, interaction – communication, trade, investment, travel – across state borders is normal, particularly among most countries in the twenty-first century.   States vary in their capacity to build and maintain a national identity and to have that identity perpetually trump all other group affiliations, including transnational ones, across all conditions.   Thus transnational group affiliations – ethnic, religious, ideological, class, sexual – are part of life for people in most countries.  Insofar as communication across state boundaries is uncensored by states, transnational group affiliations can yield transnational group polarization.  The informal model above may then incorporate democrats and authoritarians in a second state (and a third, a fourth, and so on).
 
@@ -84,6 +87,20 @@ Social-psychological literature notes that people vary by level of commitment to
 
 It stands to reason that the low-commitment actors posited by Ellemers et al. would behave like Smith's ``rational" actors.
 In sum, an exogenous event that either raises the prestige of social group $A$ or threatens group $A$ may cause people who belong to multiple overlapping groups $A$ through $Z$ to identify more strongly with $A$ and against $\neg A$ and less with $B$ and against $\neg B$, etc.  Increases in status and in threats may be simultaneous:  an increase in $A$'s status may simultaneously threaten members of $\neg A$ and thus cause them to identify more as $\neg A$s and against group $A$.  Large public anti-government demonstrations, as take place during a typical political spring, can both raise the status of being anti-government and simultaneously threaten those who identify with the government.  And again, polarization tends to feed on itself:  as members of $A$ observe members of $\neg A$ identifying more as $\neg A$s, members of $A$ will identify still more strongly with $A$; and so on. 
+
+\section*{Hypotheses}
+
+We propose to test the following hypotheses based on this theory:
+
+\begin{tabular}{lp{10cm}}
+	H1 & After polarizing events, the difference in latent ideological positions between competing groups will diverge from each other very quickly.\\
+	H2 & After polarizing events, cross-national ideological groups will tend to increase within-country polarization in response to events occurring in the other country.\\
+	H3 & After polarizing events, the direction of feedback between cross-national groups will vary depending on which country experienced the polarizing event.
+\end{tabular}
+
+We can further operationalize the first hypothesis by estimating ideological position as a latent ideal point that can vary over time. For these reasons, we collected data on ideological actors in Egypt and Tunisia from Twitter, as we described in the next section. For hypotheses 2 and 3, we need to have summary statistics that look at patterns of ideological interaction across countries and see if these summary statistics change as a result of the polarizing event of interest. 
+
+The primary event we are most interested in is the coup that overthrew President Mohammed Morsi in July of 2013 as it represented a clear division between secularists and Islamists. However, we will also examine other polarizing events, including the Muslim-Christian clashes on April 6, 2013 and the government's attack on pro-Morsi demonstrators on August 13, 2013, both of which occurred in Egypt.
  
 \section*{Data Collection}
 Analyzing these phenomena quantitatively is difficult because we need good measures of ideology across countries that also varies over time. The advent of social media during the Arab Uprisings provides some of the first available data that we can use to examine the predictions of the theory. We chose to use Twitter due to its public nature and the ability to closely track elite users, or those users with a large number of followers. We built a sample of Egyptian and Tunisian twitter users that are broadly representative of political thinking \& discourse within these countries.
@@ -138,7 +155,7 @@ To apply this form of feedback process to IRT, first consider the standard 2-PL 
 Y_{ij} = \prod^{i=1}_I \prod^{j=1}_J \phi(\delta_j * \alpha_i - \eta_j)
 \end{equation}
 
-In this model, $\alpha_i$ represent the latent ideal points of the elites, while $\delta_j$ represent discrimination parameters for each citizen (equivalent to factor scores) and $\eta_j$ can be interpreted as the average probability that citizen $j$ retweets elite $i$ $Y_{ij}$ times. Given that in our data the number of re-tweets of a particular elite $i$ has a maximum of three for each period, we use an ordered-logistic function $phi(\cdot)$ for $Y_{ij}$ that estimates cutpoints $c_{ijk}$ for each retweet $k \in K$ with a maximum of $K=3$.\footnote{For a full explication of the ordinal IRT model for ideal points, see \parencite{kubinec2017}}
+In this model, $\alpha_i$ represent the latent ideal points of the elites, while $\delta_j$ represent discrimination parameters for each citizen (equivalent to factor scores) and $\eta_j$ can be interpreted as the average probability that citizen $j$ retweets elite $i$ $Y_{ij}$ times. Given that in our data the number of re-tweets of a particular elite $i$ has a maximum of three for each period, we use an ordered-logistic function $\phi(\cdot)$ for $Y_{ij}$ that estimates cutpoints $c_{ijk}$ for each retweet $k \in K$ with a maximum of $K=3$.\footnote{For a full explication of the ordinal IRT model for ideal points, see \parencite{kubinec2017}}
 
 For our purposes, we have four $\alpha_i$ parameters that represent each of our ideological groups, so we can subscript them as $\alpha_{ig}$ where $g \in [1,2]$ cleavages (Islamist, Secularist) and $i \in [1,2]$ countries (Tunisia, Egypt).  Following on \textcite{quinn2002} and \textcite{kropko2013}, we can include the co-integration between the ideological groups $g$ via priors on the $\alpha_{ig}$:
 
@@ -161,10 +178,27 @@ To build a full Bayesian model, we need to assign priors to all other parameters
 	\mu_{\delta} &\sim N(0,2);\\
 \end{align*}
 
-The prior on $\gamma_g$ is sampled from an unconstrained space that corresponds to using a logit link function on $(0,1)$. The hierarchical priors on $\eta_j$ and $\delta_j$ are used for both regularization, as there are many citizens in the model, and for identification \parencite{gelman2005}. The difference prior on the cutpoints $c_k$ are used because the cutpoints are only identified up to a difference. Finally, the feedback parameter $\beta_{2g}$ is given a tight prior around 1 to reflect our prior belief that ideological groups in either country are equally likely to influence each other. We further identify the model by constraining the polarity of $\delta_j$s and by fixing the first ideal point $\alpha_{ig1}$ for each groups to either 1 or -1 so that the system evolves from the same starting points.
+The prior on $\gamma_g$ is sampled from an unconstrained space that corresponds to using a logit link function on $(0,1)$. The hierarchical priors on $\eta_j$ and $\delta_j$ are used for both regularization, as there are many citizens in the model, and for identification \parencite{gelman2005}. The difference prior on the cutpoints $c_k$ are used because the cutpoints are only identified up to a difference. Finally, the feedback parameter $\beta_{2g}$ is given a tight prior around 1 to reflect our prior belief that ideological groups in either country are equally likely to influence each other. We further identify the model by constraining the polarity of $\delta_j$s and by fixing the first ideal point $\alpha_{ig1}$ for each groups to either .5 or -.5 so that the system evolves from the same starting points.
 
- 
+ To illustrate the model, we simulated data by first generating ideal points corresponding to the priors listed above, and then simulating the ordered-logit response as a function of the ideal points. The results for four latent time series, each of which is paired with another, is shown in Figure \ref{sim_data}. As can be seen, the two sets of time series each follow a random-walk pattern over time without a clear direction. However, the difference between the time series is stable and does not vary. 
+ \begin{figure}[!h]
+ 	\caption{Simulated Data for the Co-integrated IRT Time Series Model}\label{sim_data}
+ 	\centering
+ 	\includegraphics[width=.9\linewidth]{ecm_example.png}
+ \end{figure}
 
+The vertical line in Figure \ref{sim_data} shows a point where we changed the values for the $\gamma$ parameter governing the level of co-integration. For the top time series, $\gamma$ fell, so after the dotted line the two time series do not track each other as closely. For the bottom time series, $\gamma$ increased, causing the two time series to follow each other more closely. For this reason, the $\gamma$ parameter is a good way to test hypothesis 2 regarding how closely ideological groups follow each other across countries. We can further test hypothesis 1 by looking at whether ideological points show exogenous shocks as a result of polarizing events, and we can examine hypothesis 3 by looking at changes in the co-integration vector governing the direction of feedback between ideological groups.
+
+\section*{Model Results}
+
+We present here results from a variational Bayesian approximation of the true posterior \parencite{NIPS2015_5758} because the large number of parameters in the model (more than 32,000 citizen ideal points) makes standard MCMC estimation challenging. This variational approximation is quite close, although it will tend to under-estimate some covariances between parameters as it assumes normality of the posterior \parencite{NIPS2015_5758}. 
+
+We first present a plot showing the estimated ideal points for the four ideological groups along with vertical lines indicating when the polarizing events occurred. The confidence intervals on the chart reflects the 10\%-90\% density region of the posterior, hereafter referred to as the high-posterior density (HPD) interval. The HPD intervals are much smaller for the secularists because there are more Twitter accounts in the sample for these groups. As can be seen, the ideological point distributions are largely stable over time, as would be expected given the nine-month data collection period. Furthermore, ideal points are more stable in Tunisia than in Egypt, as would also be expected given that the polarizing events in this sample all occurred in Egypt. 
+ \begin{figure}[!h]
+	\caption{Estimated Ideal Point Locations for Cross-National Ideological Groups}\label{arab_id_facet}
+	\centering
+	\includegraphics[width=.9\linewidth]{arab_ideology}
+\end{figure}
 
 
 \printbibliography
